--- a/react_app/package.json
+++ b/react_app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "bignumber.js": "^9.1.2",
     "ethers": "^6.7.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -20,7 +21,7 @@
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
-    "web3": "^4.0.3"
+    "web3": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
